--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+  <title>contact details</title>
+</head>
 <body>
 <iframe src="https://script.google.com/macros/s/AKfycbzqUid3QboEL2Zklu2ZBsrVLLxkJSv2Pe0TVrTklI7pohHbhfyX/exec"></iframe>
 </body>
